feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -5,9 +5,39 @@
   publisher={Addison-Wesley}
 }
 
+@misc{rest,
+  title        = {Definicja interfejsu REST},
+  howpublished = {Dostęp zdalny (29.12.2023): \url{https://restfulapi.net}}
+}
+
+@misc{fooddeliveryapps,
+  title        = {Najpopularniejsze aplikacje do zamawiania jedzenia w Polsce},
+  howpublished = {Dostęp zdalny (29.12.2023): \url{https://www.restaumatic.com/blog/strony-do-zamawiania-jedzenia-najwieksze-aplikacje-w-polsce/}}
+}
+
+@misc{http,
+  title        = {Specyfikacja protokołu HTTP},
+  howpublished = {Dostęp zdalny (29.12.2023): \url{https://www.w3.org/Protocols/}}
+}
+
+@misc{c4,
+  title        = {Definicja modelu C4},
+  howpublished = {Dostęp zdalny (29.12.2023): \url{https://c4model.com}}
+}
+
+@misc{protobuf,
+  title        = {Format Protocol Buffers},
+  howpublished = {Dostęp zdalny (29.12.2023): \url{https://protobuf.dev}}
+}
+
 @misc{axonframework,
   title        = {Axon Framework},
   howpublished = {Dostęp zdalny (07.06.2023): \url{https://docs.axoniq.io/reference-guide}}
+}
+
+@misc{axonserver,
+  title        = {Axon Server},
+  howpublished = {Dostęp zdalny (29.12.2023): \url{https://developer.axoniq.io/en/axon-server/overview}}
 }
 
 @misc{springboot,
@@ -53,17 +83,17 @@
 }
 
 @misc{grpc,
-  title        = {Strona internetowa protokołu gRPC},
+  title        = {Protokół gRPC},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://grpc.io}}
 }
 
 @misc{rabbitmq,
-  title        = {Strona internetowa kolejki wiadomości RabbitMQ},
+  title        = {Kolejka wiadomości RabbitMQ},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://www.rabbitmq.com}}
 }
 
 @misc{kafka,
-  title        = {Strona internetowa kolejki wiadomości Apache Kafka},
+  title        = {Kolejka wiadomości Apache Kafka},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://kafka.apache.org}}
 }
 
@@ -108,42 +138,42 @@
 }
 
 @misc{gmaps,
-  title        = {Strona internetowa platformy Google Maps},
+  title        = {Platforma Google Maps},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://mapsplatform.google.com}}
 }
 
 @misc{stripe,
-  title        = {Strona internetowa bramki płatności Stripe},
+  title        = {Bramka płatności Stripe},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://stripe.com}}
 }
 
 @misc{mongodb,
-  title        = {Strona internetowa bazy danych MongoDB},
+  title        = {Baza danych MongoDB},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://www.mongodb.com}}
 }
 
 @misc{locust,
-  title        = {Strona internetowa biblioteki do testów wydajnościowych Locust},
+  title        = {Biblioteka do testów wydajnościowych Locust},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://locust.io}}
 }
 
 @misc{12factors,
-  title        = {Strona internetowa dwunastu czynników wpływających na jakość oprogramowania},
+  title        = {Dwanaście czynników wpływających na jakość oprogramowania},
   howpublished = {Dostęp zdalny (06.12.2023): \url{https://12factor.net/pl}}
 }
 
 @misc{mailjet,
-  title        = {Strona internetowa platformy Mailjet},
+  title        = {Platforma Mailjet},
   howpublished = {Dostęp zdalny (10.12.2023): \url{https://www.mailjet.com}}
 }
 
 @misc{invoicegenerator,
-  title        = {Strona internetowa serwisu "Invoice Generator"},
+  title        = {Serwis "Invoice Generator"},
   howpublished = {Dostęp zdalny (10.12.2023): \url{https://invoice-generator.com/developers}}
 }
 
 @misc{kotlin,
-  title        = {Strona internetowa języka programowania Kotlin},
+  title        = {Język programowania Kotlin},
   howpublished = {Dostęp zdalny (11.12.2023): \url{https://kotlinlang.org}}
 }
 
@@ -158,7 +188,7 @@
 }
 
 @misc{typescript,
-  title        = {Strona internetowa języka TypeScript},
+  title        = {Język TypeScript},
   howpublished = {Dostęp zdalny (16.12.2023): \url{https://www.typescriptlang.org}}
 }
 
@@ -168,17 +198,17 @@
 }
 
 @misc{remix,
-  title        = {Strona internetowa biblioteki Remix},
+  title        = {Biblioteka Remix},
   howpublished = {Dostęp zdalny (16.12.2023): \url{https://remix.run}}
 }
 
 @misc{gradle,
-  title        = {Strona internetowa systemu budowania Gradle},
+  title        = {System budowania Gradle},
   howpublished = {Dostęp zdalny (17.12.2023): \url{https://gradle.org}}
 }
 
 @misc{detekt,
-  title        = {Strona internetowa narzędzia do statycznej analizy kodu w języku Kotlin - detekt},
+  title        = {Narzędzie do statycznej analizy kodu w języku Kotlin - detekt},
   howpublished = {Dostęp zdalny (17.12.2023): \url{https://detekt.dev}}
 }
 
@@ -193,46 +223,46 @@
 }
 
 @misc{k8s,
-  title        = {Strona internetowa orkiestratora kontenerów Kubernetes},
+  title        = {Orkiestrator kontenerów Kubernetes},
   howpublished = {Dostęp zdalny (17.12.2023): \url{https://kubernetes.io}}
 }
 
 @misc{gcp,
-  title        = {Strona internetowa chmury Google Cloud Platform},
+  title        = {Chmura Google Cloud Platform},
   howpublished = {Dostęp zdalny (17.12.2023): \url{https://cloud.google.com}}
 }
 
 @misc{grafana-loki,
-  title        = {Strona internetowa zestawu narzędzi Grafana Loki},
+  title        = {Zestaw narzędzi Grafana Loki},
   howpublished = {Dostęp zdalny (18.12.2023): \url{https://grafana.com/oss/loki/}}
 }
 
 @misc{axon-console,
-  title        = {Strona internetowa zestawu narzędzi Grafana Loki},
+  title        = {Platforma Axon Console},
   howpublished = {Dostęp zdalny (18.12.2023): \url{https://grafana.com/oss/loki/}}
 }
 
 @misc{kotest,
-  title        = {Strona internetowa biblioteki do testowania - Kotest},
+  title        = {Biblioteka do testowania - Kotest},
   howpublished = {Dostęp zdalny (20.12.2023): \url{https://kotest.io}}
 }
 
 @misc{jacoco,
-  title        = {Strona internetowa biblioteki do mierzenia pokrycia testami - JaCoCo},
+  title        = {Biblioteka do mierzenia pokrycia testami - JaCoCo},
   howpublished = {Dostęp zdalny (20.12.2023): \url{https://www.jacoco.org/jacoco/}}
 }
 
 @misc{restassured,
-  title        = {Strona internetowa biblioteki do testowania API - Rest Assured},
+  title        = {Biblioteka do testowania API - Rest Assured},
   howpublished = {Dostęp zdalny (22.12.2023): \url{https://rest-assured.io}}
 }
 
 @misc{selenium,
-  title        = {Strona internetowa biblioteki do automatyzacji przeglądarek internetowych do celów testowych - Selenium},
+  title        = {Biblioteka do automatyzacji przeglądarek internetowych do celów testowych - Selenium},
   howpublished = {Dostęp zdalny (22.12.2023): \url{https://www.selenium.dev}}
 }
 
 @misc{docker,
-  title        = {Strona internetowa narzędzia do konteneryzacji - Docker},
+  title        = {Narzędzie do konteneryzacji - Docker},
   howpublished = {Dostęp zdalny (28.12.2023): \url{https://www.docker.com}}
 }
