--- a/docs/thesis/tex/1-wstep.tex
+++ b/docs/thesis/tex/1-wstep.tex
@@ -23,11 +23,11 @@ Celem niniejszej pracy było zaprojektowanie, stworzenie, wdrożenie oraz przete
 
 \subsection{Charakterystyka problemu}
 
-Zastosowana architektura wymagała odpowiedniego podziału systemu informatycznego na mikroserwisy, które komunikują się między sobą w celu spełnienia wymagań biznesowych. System został podzielony na dwie części: kliencką i serwerową. Część kliencka jest aplikacją webową, uruchamianą w przeglądarce klienta, komunikującą się z częścią serwerową przy pomocy interfejsu REST. Część serwerowa została wykonana we wcześniej wspomnianej architekturze mikroserwisowej i zawiera całą logikę biznesową systemu. W tej pracy omówiono zastosowane techniki przy tworzeniu modułów oraz korzyści wynikające z wykorzystania tej specyficznej architektury. Ponadto, zaprezentowano krótkie zestawienie tej architektury z monolityczną, analizując ich dopasowanie do omawianego problemu.
+Zastosowana architektura wymagała odpowiedniego podziału systemu informatycznego na mikroserwisy, które komunikują się między sobą w celu spełnienia wymagań biznesowych. System został podzielony na dwie części: kliencką i serwerową. Część kliencka jest aplikacją webową, uruchamianą w przeglądarce klienta, komunikującą się z częścią serwerową przy pomocy interfejsu REST \cite{rest}. Część serwerowa została wykonana we wcześniej wspomnianej architekturze mikroserwisowej i zawiera całą logikę biznesową systemu. W pracy omówiono zastosowane techniki przy tworzeniu modułów oraz korzyści wynikające z wykorzystania tej specyficznej architektury. Ponadto, zaprezentowano krótkie zestawienie tej architektury z monolityczną, analizując ich dopasowanie do omawianego problemu.
 
 \subsection{Przegląd podobnych rozwiązań}
 
-W ramach tej pracy inżynierskiej Autor stwierdza, że nie był w stanie przeprowadzić dogłębnego porównania projektowanego systemu z istniejącymi na rynku rozwiązaniami takimi jak Uber Eats, Wolt, Pyszne.pl, Bolt Food. Powodem tego jest ograniczony dostęp do szczegółowych informacji na temat ich architektury serwerowej i rozwiązań technologicznych. Ponadto, porównanie funkcjonalności z perspektywy użytkownika końcowego nie było głównym celem pracy, gdyż nacisk położono nie na rozwój licznych funkcjonalności, lecz na badanie aspektów technicznych związanych z tworzeniem skalowalnych aplikacji webowych. W związku z tym analiza skupia się bardziej na kwestiach architektonicznych i wydajnościowych, a nie na bezpośredniej konkurencji z funkcjami oferowanymi przez wymienione platformy.
+W ramach tej pracy inżynierskiej Autor stwierdza, że nie był w stanie przeprowadzić dogłębnego porównania projektowanego systemu z istniejącymi na rynku rozwiązaniami takimi jak Uber Eats, Wolt, Pyszne.pl, Bolt Food \cite{fooddeliveryapps}. Powodem tego jest ograniczony dostęp do szczegółowych informacji na temat ich architektury serwerowej i rozwiązań technologicznych. Ponadto, porównanie funkcjonalności z perspektywy użytkownika końcowego nie było głównym celem pracy, gdyż nacisk położono nie na rozwój licznych funkcjonalności, lecz na badanie aspektów technicznych związanych z tworzeniem skalowalnych aplikacji webowych. W związku z tym analiza skupia się bardziej na kwestiach architektonicznych i wydajnościowych, a nie na bezpośredniej konkurencji z funkcjami oferowanymi przez wymienione platformy.
 
 
 \subsection{Struktura pracy}
