--- a/docs/thesis/tex/4-architektura.tex
+++ b/docs/thesis/tex/4-architektura.tex
@@ -25,7 +25,7 @@ Wydzielono również moduł niebędący mikroserwisem, a jedynie biblioteką, kt
 
 W celu przedstawienia architektury systemu w sposób zrozumiały i przejrzysty, został wykorzystany model C4.
 
-Model C4 (Context, Containers, Components, Code) to metoda wizualizacji architektury oprogramowania, zaprojektowana przez Simona Browna, która skupia się na dekompozycji systemu na różne poziomy abstrakcji. Model ten zaczyna od Kontekstu (poziom 1), pokazując zewnętrzne zależności systemu, przechodzi przez Kontenery (poziom 2), ukazujące główne części systemu (np. aplikacje webowe, bazy danych), aż do Komponentów (poziom 3), przedstawiających wewnętrzną budowę poszczególnych pojemników, kończąc na Kodzie (poziom 4), który pokazuje szczegóły implementacji. Model ten jest szeroko stosowany w projektowaniu i dokumentacji architektury oprogramowania, pozwalając na jasne i spójne przedstawienie skomplikowanych systemów.
+Model C4 \cite{c4} (Context, Containers, Components, Code) to metoda wizualizacji architektury oprogramowania, zaprojektowana przez Simona Browna, która skupia się na dekompozycji systemu na różne poziomy abstrakcji. Model ten zaczyna od Kontekstu (poziom 1), pokazując zewnętrzne zależności systemu, przechodzi przez Kontenery (poziom 2), ukazujące główne części systemu (np. aplikacje webowe, bazy danych), aż do Komponentów (poziom 3), przedstawiających wewnętrzną budowę poszczególnych pojemników, kończąc na Kodzie (poziom 4), który pokazuje szczegóły implementacji. Model ten jest szeroko stosowany w projektowaniu i dokumentacji architektury oprogramowania, pozwalając na jasne i spójne przedstawienie skomplikowanych systemów.
 
 Pierwszym poziomem modelu C4 jest \textbf{Kontekst} (ang. \textit{Context}), który przedstawia zewnętrzne zależności systemu. Został on przedstawiony na rysunku \ref{fig:c4context}.
 
@@ -49,8 +49,7 @@ Na poziomie Kontenerów zostały przedstawione poszczególne serwisy, które zos
 
 Trzecim poziomem modelu C4 są \textbf{Komponenty} (ang. \textit{Components}), które przedstawiają wewnętrzną budowę poszczególnych Kontenerów. Nie zostały one przedstawione w niniejszej pracy, ze względu na zbyt dużą szczegółowość. 
 
-Czwarty poziom modelu C4 to \textbf{Kod} (ang. \textit{Code}), który przedstawia szczegóły implementacji poszczególnych Komponentów, został pominięty z tego samego powodu.
-
+Czwarty poziom modelu C4 to \textbf{Kod} (ang. \textit{Code}), który przedstawia szczegóły implementacji poszczególnych Komponentów.
 
 \subsection{Protokoły i formaty komunikacji}
 
@@ -62,7 +61,7 @@ W celu zapewnienia komunikacji pomiędzy poszczególnymi komponentami systemu zo
 
     \item \textbf{Styl REST} (ang. \textit{Representational State Transfer}) - styl architektury oprogramowania używany do projektowania sieciowych systemów aplikacji, oparty na bezstanowych żądaniach i odpowiedziach, wykorzystujący standardowe metody HTTP i formaty wymiany danych, takie jak JSON czy XML, do tworzenia skalowalnych i elastycznych interfejsów API. REST akcentuje prostotę komunikacji sieciowej, umożliwiając łatwą integrację między różnymi systemami w Internecie.
     
-    \item \textbf{Protokół gRPC} (ang. \textit{gRPC Remote Procedure Call}) - nowoczesny, otwartoźródłowy protokół zdalnego wywoływania procedur, opracowany przez Google, który umożliwia wydajną, szybką i bezpieczną komunikację między mikrousługami. Wykorzystuje format wymiany danych Protocol Buffers (Protobuf) i jest oparty na modelu klient-serwer, wspierając funkcje takie jak dwustronna komunikacja strumieniowa, kontrola przepływu i uwierzytelnienie oparta na certyfikatach TLS. W projekcie został wykorzystany do komunikacji pomiędzy serwisami a kolejką komunikatów oraz magazynem zdarzeń.
+    \item \textbf{Protokół gRPC} (ang. \textit{gRPC Remote Procedure Call}) - nowoczesny, otwartoźródłowy protokół zdalnego wywoływania procedur, opracowany przez Google, który umożliwia wydajną, szybką i bezpieczną komunikację między mikrousługami. Wykorzystuje format wymiany danych Protocol Buffers (Protobuf) \cite{protobuf} i jest oparty na modelu klient-serwer, wspierając funkcje takie jak dwustronna komunikacja strumieniowa, kontrola przepływu i uwierzytelnienie oparte na certyfikatach TLS. W projekcie został wykorzystany do komunikacji pomiędzy serwisami a kolejką komunikatów oraz magazynem zdarzeń.
 
     \item \textbf{Format JSON} \cite{json} (ang. \textit{JavaScript Object Notation}) - lekki format wymiany danych, łatwy do czytania i pisania dla ludzi oraz prosty do parsowania i generowania dla maszyn, wykorzystujący tekstowe struktury do reprezentowania obiektowych danych, zazwyczaj składających się z par klucz-wartość i uporządkowanych list. Jest powszechnie stosowany w komunikacji internetowej, w szczególności w interfejsach REST API i konfiguracjach. W projekcie został wykorzystany do przesyłania danych pomiędzy częścią kliencką systemu a serwisami.
     
@@ -74,11 +73,11 @@ W celu zapewnienia komunikacji pomiędzy poszczególnymi komponentami systemu zo
 
 Z powodu zastosowania wzorców CQRS i Event Sourcing w części serwerowej systemu odpowiadającej za obsługę komend nie ma konieczności stosowania standardowej bazy danych. Zamiast tego zastosowano specjalistyczne rozwiązanie, które umożliwia przechowywanie zdarzeń w postaci strumieni zdarzeń (ang. \textit{event streams}). Jest to \textbf{Magazyn zdarzeń} (ang. \textit{event store}), który jest wykorzystywany przez wszystkie serwisy.
 
-Zastosowanym magazynem zdarzeń jest Axon Server od firmy AxonIQ. Jest to otwartoźródłowy, wysokowydajny i niezawodny magazyn zdarzeń, zoptymalizowany w kierunku dodawania nowych zdarzeń na końcu strumienia oraz ich odczytu od podanego momentu w czasie.
+Zastosowanym magazynem zdarzeń jest Axon Server \cite{axonserver} od firmy AxonIQ. Jest to otwartoźródłowy, wysokowydajny i niezawodny magazyn zdarzeń, zoptymalizowany w kierunku dodawania nowych zdarzeń na końcu strumienia oraz ich odczytu od podanego momentu w czasie.
 
 Axon Server jest również nieodzownym elementem systemów opartych na frameworku Axon Framework \cite{axonframework}, który został wykorzystany przez Autora do implementacji części serwerowej projektu.
 
-W części odpowiadającej za obsługę zapytań oraz sag, które wymagają standardowej bazy danych, zastosowano bazę MongoDB \cite{mongodb}. Jest to nierelacyjna, dokumentowa baza danych typu NoSQL \cite{nosql},  która jest wysoce skalowalna i elastyczna, a także zapewnia wysoką wydajność i niezawodność. Dodatkowo MongoDB jest jednym z najpopularniejszych rozwiązań bazodanowych a aplikacjach webowych, co sprawia, że jest dobrze wspierana przez społeczność oraz posiada bogatą dokumentację. Jest to również jedna z baz danych wspieranych przez framework Axon Framework.
+W części odpowiadającej za obsługę zapytań oraz sag, które wymagają standardowej bazy danych, zastosowano bazę MongoDB \cite{mongodb}. Jest to nierelacyjna, dokumentowa baza danych typu NoSQL \cite{nosql},  która jest wysoce skalowalna i elastyczna, a także zapewnia wysoką wydajność i niezawodność. Dodatkowo MongoDB jest jednym z najpopularniejszych rozwiązań bazodanowych w aplikacjach webowych, co sprawia, że jest dobrze wspierana przez społeczność oraz posiada bogatą dokumentację. Jest to również jedna z baz danych wspieranych przez framework Axon Framework.
 
 W projekcie wybrano bazę dokumentową przechowującą dane w postaci dokumentów JSON, w przeciwieństwie do standardowych baz relacyjnych, z powodu braku konieczności skomplikowanego mapowania rekordów z bazy na odpowiedzi na zapytania HTTP, w części odpowiadającej za obsługę zapytań.
 
@@ -90,11 +89,11 @@ W celu zapewnienia komunikacji pomiędzy poszczególnymi komponentami systemu zo
 
 W celu zapewnienia bezpieczeństwa systemu został zaimplementowany mechanizm uwierzytelniania i autoryzacji. W projekcie został wykorzystany framework Spring Security. Jest to framework, który zapewnia szeroki zakres funkcjonalności związanych z bezpieczeństwem, takich jak uwierzytelnianie, autoryzacja, zarządzanie sesjami, obsługa tokenów JWT, obrona przed atakami typu CSRF i wiele innych.
 
-Zastosowanym w projekcie mechanizmem uwierzytelniania jest uwierzytelnianie oparte na tokenach JWT (ang. \textit{JSON Web Token}). Jest to standard definiujący sposób bezpiecznej wymiany informacji w postaci obiektów JSON pomiędzy stroną kliencką a serwerem. Tokeny JWT są podpisane cyfrowo, co umożliwia weryfikację ich autentyczności i integralności. W projekcie zostały wykorzystane tokeny JWT oparte na algorytmie HS256 (\textit{HMAC-SHA256}), który jest algorytmem symetrycznym, co oznacza, że do podpisania i weryfikacji tokenów wykorzystywany jest ten sam klucz. 
+Zastosowanym w projekcie mechanizmem uwierzytelniania jest uwierzytelnianie oparte na tokenach JWT (ang. \textit{JSON Web Token}). Jest to standard definiujący sposób bezpiecznej wymiany informacji w postaci obiektów JSON pomiędzy stroną kliencką a serwerem. Tokeny JWT są podpisane cyfrowo, co umożliwia weryfikację ich autentyczności i integralności. W projekcie zostały wykorzystane tokeny JWT oparte na algorytmie RS256 (ang. \textit{RSA Signature with SHA-256}), który jest algorytmem asymetrycznym, co oznacza, że do podpisania tokena wykorzystywany jest klucz prywatny, a do weryfikacji klucz publiczny.
 
 Tokeny JWT generowane są na platformie Auth0, po wcześniejszym uwierzytelnieniu użytkownika. Jest to platforma, która umożliwia zarządzanie tożsamością i dostępem, a także generowanie tokenów JWT w ramach protokołu OAuth2. Auth0 wspiera wiele różnych sposobów uwierzytelniania, takich jak uwierzytelnianie za pomocą loginu i hasła, uwierzytelnianie za pomocą kont społecznościowych, uwierzytelnianie za pomocą SSO (ang. \textit{Single Sign-On}), uwierzytelnianie za pomocą MFA (ang. \textit{Multi-Factor Authentication}), itp. Dodatkowo Auth0 zapewnia mechanizmy do zarządzania użytkownikami, rolami, uprawnieniami, a także logami operacji.
 
-OAuth2 (ang. \textit{Open Authorization}) jest to otwarty standard autoryzacji, który umożliwia bezpieczny dostęp do zasobów użytkownika, bez konieczności ujawniania jego danych uwierzytelniających. W projekcie został wykorzystany protokół OAuth2 w wersji Authorization Code Grant, który jest jednym z najbardziej bezpiecznych sposobów uwierzytelniania. W tym trybie użytkownik jest przekierowywany na stronę logowania Auth0, gdzie po poprawnym uwierzytelnieniu jest przekierowywany z powrotem do aplikacji klienckiej, a wraz z nim przesyłany jest token JWT. Token ten jest następnie wykorzystywany do autoryzacji użytkownika w systemie, przez co nie ma konieczności przekazywania danych uwierzytelniających do serwisów serwerowych. JWT przekazywane jest w ramach nagłówka HTTP \textit{Authorization} w postaci \textit{Bearer Token}.
+OAuth2 (ang. \textit{Open Authorization}) jest to otwarty standard autoryzacji, który umożliwia bezpieczny dostęp do zasobów użytkownika, bez konieczności ujawniania jego danych uwierzytelniających. W projekcie został wykorzystany protokół OAuth2 w wersji Authorization Code Grant, który jest jednym z najbardziej bezpiecznych sposobów uwierzytelniania. W tym trybie użytkownik jest przekierowywany na stronę logowania Auth0, gdzie po poprawnym uwierzytelnieniu jest przekierowywany z powrotem do aplikacji klienckiej, a wraz z nim przesyłany jest kod, który może być następnie wymieniony na token JWT. Token ten jest następnie wykorzystywany do autoryzacji użytkownika w systemie, przez co nie ma konieczności przekazywania danych uwierzytelniających do serwisów serwerowych. JWT przekazywane jest w ramach nagłówka HTTP \textit{Authorization} w postaci \textit{Bearer Token}.
 
 \subsection{Integracje zewnętrzne}
 
@@ -110,7 +109,7 @@ W projekcie zostały wykorzystane następujące integracje:
 
     \item Auth0 \cite{auth0} - opisana w sekcji Uwierzytelnianie i autoryzacja platforma do zarządzania tożsamością i dostępem, a także generowania tokenów JWT w ramach protokołu OAuth2,
     \item Google Maps Platform \cite{gmaps} - platforma map i nawigacji firmy Google, wykorzystywana w projekcie do geokodowania adresów oraz wyznaczania tras i odległości między punktami. Integracja odbywa się przy pomocy biblioteki \newline \textit{com.google.maps:google-maps-services} w wersji 2.2.0,
-    \item Stripe \cite{stripe} - platforma płatności internetowych, wykorzystywana w projekcie do obsługi płatności kartą kredytową lub debetową. Integracja odbywa się przy pomocy biblioteki \textit{com.stripe:stripe-java} w wersji 23.4.0. W momencie płatności, część serwerowa tworzy tzw. sesję płatności, a użytkownik jest przekierowywany na stronę Stripe, gdzie dokonuje płatności. Po zakończeniu płatności Stripe przekierowuje użytkownika z powrotem do aplikacji klienckiej, w międzyczasie powiadamiając część serweerową o stanie płatności przy pomocy techniki tzw. \textit{webhooków},
+    \item Stripe \cite{stripe} - platforma płatności internetowych, wykorzystywana w projekcie do obsługi płatności kartą kredytową lub debetową. Integracja odbywa się przy pomocy biblioteki \textit{com.stripe:stripe-java} w wersji 23.4.0. W momencie płatności, część serwerowa tworzy tzw. sesję płatności, a użytkownik jest przekierowywany na stronę Stripe, gdzie dokonuje płatności. Po zakończeniu płatności Stripe przekierowuje użytkownika z powrotem do aplikacji klienckiej, w międzyczasie powiadamiając część serwerową o stanie płatności przy pomocy techniki tzw. \textit{webhooków},
     \item Mailjet \cite{mailjet} - platforma do wysyłania wiadomości e-mail, wykorzystywana w projekcie do wysyłania wygenerowanych faktur. Integracja odbywa się przy pomocy biblioteki \textit{com.mailjet:mailjet-client} w wersji 5.2.4,
     \item Invoice Generator \cite{invoicegenerator} - darmowe RESTful API do generowania faktur w postaci plików PDF, wykorzystywane w projekcie do generowania faktur dla użytkowników, restauracji i kurierów. Integracja odbywa się przy pomocy protokołu HTTP.
 
