--- a/docs/thesis/tex/5-implementacja.tex
+++ b/docs/thesis/tex/5-implementacja.tex
@@ -249,7 +249,7 @@ interface SpringDataOrderRepository
 }
 \end{lstlisting}
 
-Repozytorium bazowe, \textit{ReactiveMongoRepository} zawiera podstawowe metody do operacji na bazie danych, takie jak np. \textit{save}, \textit{findById}, \textit{findAll} itp. Repozytorium \textit{SpringDataOrderRepository} rozszerza repozytorium bazowe i dodaje do niego dodatkową metodę \textit{findAllByUserId}, która zwraca wszystkie zamówienia danego użytkownika.
+Repozytorium bazowe \textit{ReactiveMongoRepository} zawiera podstawowe metody do operacji na bazie danych, takie jak np. \textit{save}, \textit{findById}, \textit{findAll} itp. Repozytorium \textit{SpringDataOrderRepository} rozszerza repozytorium bazowe i dodaje do niego dodatkową metodę \textit{findAllByUserId}, która zwraca wszystkie zamówienia danego użytkownika.
 
 \subsubsection{Współdzielony kod}
 
@@ -287,7 +287,7 @@ class SecurityConfig {
 
 Klasa ta jest odpowiedzialna za konfigurację mechanizmu uwierzytelniania i autoryzacji. Została ona umieszczona w module \textit{shared}, ponieważ jest ona wspólna dla wszystkich serwisów w ramach systemu. Uruchamia ona mechanizm uwierzytelniania i autoryzacji oferowany przez framework Spring Security. Uwierzytelnianie odbywa się przy pomocy tokenów JWT. Dodatkowo wyłącza ona mechanizmy obrony przed atakiem CSRF oraz CORS, które są niepotrzebne w przypadku zastosowanej infrastruktury sieciowej systemu.
 
-Domyślnie, żądania na wszystkie ścieżki aplikacji wymagają uwierzytelniania. Są jednak dwie ścieżki, gdzie takie mechanizmy są wyłączone. Pierwsza z nich to ścieżka \textit{/actuator/**}, która jest wykorzystywana przez framework Spring Boot do oferowania statusu aplikacji, wykorzystywanego m.in. przez orkiestratora kontenerów Kubernetes. Druga ścieżka to \textit{/api/v1/payments/stripe-webhook}, która jest wykorzystywana przez serwis odpowiedzialny za płatności, do obsługi webhooków z serwisu Stripe.
+Domyślnie, żądania na wszystkie ścieżki aplikacji wymagają uwierzytelniania. Są jednak dwie ścieżki, gdzie takie mechanizmy są wyłączone. Pierwsza z nich to ścieżka \textit{/actuator/**}, która jest wykorzystywana przez framework Spring Boot m.in. do publikowania statusu aplikacji, wykorzystywanego przez orkiestratora kontenerów Kubernetes. Druga ścieżka to \textit{/api/v1/payments/stripe-webhook}, która jest wykorzystywana przez serwis odpowiedzialny za płatności, do obsługi webhooków z serwisu Stripe.
 
 \subsection{Część kliencka}
 
@@ -301,9 +301,9 @@ W części klienckiej aplikacji wykorzystano następujące najważniejsze narzę
 
 \textbf{TypeScript} \cite{typescript} to język programowania stworzony przez firmę Microsoft, będący rozszerzeniem języka JavaScript, poprzed wprowadzenie statycznego typowania, co pozwala programistom na wykrywanie błędów w czasie kompilacji i znacząco ułatwia zarządzanie dużymi projektami. 
 
-\textbf{React} \cite{react} to biblioteka JavaScript, która jest wykorzystywana do tworzenia interfejsów użytkownika. React jest deklaratywną biblioteką open source, rozwijaną przez firmę Facebook, która pozwala na tworzenie interfejsów użytkownika przy pomocy komponentów. Może ona być wykorzystywana do tworzenia zarówno aplikacji webowych, jak i mobilnych. W przeciwieństwie do poprzednich podejść w tworzeniu aplikacji internetowych React stosuje technikę wirtualnego drzewa dokumentu (ang. virtual DOM) do renderowania interfejsu użytkownika. Technika ta polega na przechowywaniu w pamięci drzewa DOM, które jest reprezentacją interfejsu użytkownika. W momencie zmiany stanu aplikacji, drzewo DOM jest aktualizowane, a następnie porównywane z drzewem DOM przechowywanym w pamięci. Na podstawie tego porównania, React aktualizuje tylko te elementy interfejsu użytkownika, które uległy zmianie. Dzięki temu renderowanie interfejsu użytkownika jest znacznie szybsze, co przekłada się na lepszą wydajność aplikacji.
+\textbf{React} \cite{react} to biblioteka JavaScript, która jest wykorzystywana do tworzenia interfejsów użytkownika. React jest deklaratywną biblioteką open source, rozwijaną przez firmę Facebook, która pozwala na tworzenie interfejsów użytkownika przy pomocy komponentów. Może ona być wykorzystywana do tworzenia zarówno aplikacji webowych, jak i mobilnych. W przeciwieństwie do poprzednich podejść w tworzeniu aplikacji internetowych React stosuje technikę wirtualnego drzewa dokumentu (ang. virtual DOM) do renderowania interfejsu użytkownika. Technika ta polega na przechowywaniu w pamięci drzewa DOM, które jest reprezentacją interfejsu użytkownika. W momencie zmiany stanu aplikacji, DOM jest aktualizowany, a następnie porównywany z tym przechowywanym w pamięci. Na podstawie tego porównania, React aktualizuje tylko te elementy interfejsu użytkownika, które uległy zmianie. Dzięki temu renderowanie interfejsu użytkownika jest znacznie szybsze, co przekłada się na lepszą wydajność aplikacji.
 
-\textbf{Remix} \cite{remix} to framework do tworzenia aplikacji internetowych typu MPA, oparty na modelu SSR (ang. server side rendering), czyli renderowania interfejsu użytkownika po stronie serwera. Pozwala on na opbieranie danych na poziomie trasowania, co oznacza, że dane są ładowane przed renderowaniem komponentów, co pozwala na szybsze ładowanie aplikacji i lepsze pozycjonowanie w wyszukiwarkach internetowych.
+\textbf{Remix} \cite{remix} to framework do tworzenia aplikacji internetowych typu MPA, oparty na modelu SSR (ang. server side rendering), czyli renderowania interfejsu użytkownika po stronie serwera. Pozwala on na pobieranie danych na poziomie trasowania, co oznacza, że dane są ładowane przed renderowaniem komponentów, co pozwala na szybsze ładowanie aplikacji i lepsze pozycjonowanie w wyszukiwarkach internetowych.
 
 \subsubsection{Podział na katalogi}
 
@@ -323,7 +323,7 @@ W kolejnych podrozdziałach zostaną przedstawione szczegóły implementacyjne p
 
 Komponenty interfejsu użytkownika zostały umieszczone w folderze \textit{components}. Zostały one podzielone na foldery, grupujące komponenty używane w częściach aplikacji przeznaczonych dla różnych klas użytkowników (zamawiających, managerów restauracji i kurierów).
 
-Przykładowy komponent został przedstawiony na wycinku \ref{lst:client-component}. Jest to komponent \textit{Topbar} odpowiedzialny za wyświetlanie paska nawigacji dla managerów restauracji. Przyjmuje on dwa parametry: \textit{payee} oraz \textit{restaurant}. Pierwszy z nich jest obiektem zawierającym informacje o aktualnie zalogowanym użytkowniku, a drugi zawiera informacje o restauracji, w której aktualnie pracuje użytkownik. Komponent ten wyświetla nazwę restauracji oraz jej aktualną dostępność. Dostępność jest wyświetlana w formie przycisku, który po kliknięciu wysyła żądanie HTTP PUT do serwera, w celu zmiany dostępności restauracji.
+Przykładowy komponent został przedstawiony na wycinku \ref{lst:client-component}. Jest to komponent \textit{Topbar} odpowiedzialny za wyświetlanie paska nawigacji dla managerów restauracji. Przyjmuje on dwa parametry: \textit{payee} oraz \textit{restaurant}. Pierwszy z nich jest obiektem zawierającym informacje o aktualnie zalogowanym użytkowniku, a drugi zawiera informacje o restauracji, w której aktualnie pracuje użytkownik. Komponent ten wyświetla nazwę restauracji oraz jej aktualną dostępność. Jest ona wyświetlana w formie przycisku, który po kliknięciu wysyła żądanie HTTP PUT do serwera, w celu zmiany dostępności restauracji.
 
 \begin{lstlisting}[caption={Kod komponentu interfejsu użytkownika - pasek nawigacji managera restauracji},label={lst:client-component},captionpos=b,language=JavaScript,numbers=left,showstringspaces=false]
 export default function Topbar(props: TopbarProps) {
@@ -368,7 +368,7 @@ Odpowiedzialność za dostarczenie danych oraz obsługę formularza komponent te
 
 \subsubsection{Obsługa ścieżek}
 
-Komponenty aplikacji odpowiedzialne za obsługę ścieżek zostały umieszczone w folderze \textit{routes}. W frameworku Remix komponenty te są punktami startowymi podróży użytkownika po aplikacji. Na przykład, po podanie w przeglądarce użytkownika ścieżki \textit{/v2/courier/delivery} aplikacja uruchomi plik \textit{courier.delivery.tsx}, który od tego momentu jest odpowiedzialny za ładowanie danych, obsługę formularzy i renderowanie komponentów.
+Komponenty aplikacji odpowiedzialne za obsługę ścieżek zostały umieszczone w folderze \textit{routes}. W frameworku Remix komponenty te są punktami startowymi podróży użytkownika po aplikacji. Na przykład, po podaniu w przeglądarce użytkownika ścieżki \textit{/v2/courier/delivery} aplikacja uruchomi plik \textit{v2.courier.delivery.tsx}, który od tego momentu jest odpowiedzialny za ładowanie danych, obsługę formularzy i renderowanie komponentów.
 
 Na wycinku \ref{lst:client-route} przedstawiono kod komponentu obsługującego ścieżkę \textit{/v2/ordering/restaurants} wyświetlającą listę restauracji, które może wybrać użytkownik zamawiający.
 
